Color contrast fixes

--- a/techdegree/proj8/css/styles.css
+++ b/techdegree/proj8/css/styles.css
@@ -122,7 +122,7 @@ header .name {
 	transition: 0.25s ease-out;
 }
 .card:hover {
-	border-color: #F66075;
+	border-color: #781125;
 }
 .photo {
 	display: block;
