--- a/techdegree/proj8/css/survey.css
+++ b/techdegree/proj8/css/survey.css
@@ -69,7 +69,7 @@ input[type=radio]:focus + label {
 #albums, textarea, input[type=text], input[type=email] {
 	border-radius: 5px;
 	border: 3px solid #02eabb;
-	color: #999;
+	color: #2d2d2d;
 }
 .form-section button {
 	width: 100%;
