--- a/techdegree/proj8/css/tour.css
+++ b/techdegree/proj8/css/tour.css
@@ -12,17 +12,23 @@ h1.heading {
 /*******************
  Tour Date Table 
 *******************/
+caption {
+	padding: 10px 0;
+	text-transform: uppercase;
+	border-bottom: 1px solid;
+}
 #tour-dates {
 	width: 100%;
 	margin-top: 20px;
 }
 #tour-dates td,  #tour-dates th {
-	padding: 12px 3px;
+	padding: 12px 13px;
 }
 #tour-dates th {
 	border-bottom: 1px solid;
+	background: #781125;
 }
-#tour-dates tr:nth-child(even) {
+#tour-dates tr:nth-child(2n+2) {
 	background: black;
 }
 /*******************
